# road_accident_risk

./: .gitignore  Makefile  README.md  pyproject.toml
accident_risk/: config.py  train.py  utils.py
accident_risk/data/: load.py
accident_risk/experiments/: baseline.py  evaluate.py  random_forest.py
notebooks/: 01-rg-eda.ipynb  02-rg-feature-engineering.ipynb
scripts/: start_mlflow.py
