[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "accident_risk"
version = "0.0.1"
description = "A short description of the project."
authors = [
  { name = "ravil" },
]

readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    
]
dependencies = [
    "pip",
    "pytest",
    "python-dotenv",
    "ruff",
]
requires-python = "~=3.10.0"


[tool.ruff]
line-length = 99
src = ["accident_risk"]
include = ["pyproject.toml", "accident_risk/**/*.py"]

[tool.ruff.lint]
extend-select = ["I"]  # Add import sorting

[tool.ruff.lint.isort]
known-first-party = ["accident_risk"]
force-sort-within-sections = true

